--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,16 @@
-Flask==2.0.3
-numpy==1.21.2
+Flask==3.0.3
+numpy==1.26.4
 opencv-python-headless==4.5.3.56
 pillow==8.3.1
 torch==1.9.0+cpu
 requests==2.26.0
-ultralytics==8.0.20
+ultralytics==8.2.27
+pandas==2.2.2
+pillow==10.3.0
+psutil==5.9.8
+py-cpuinfo==9.0.0
+pyparsing==3.1.2
+python-dateutil==2.9.0.post0
+pytz==2024.1
+PyYAML==6.0.1
+gunicorn==22.0.0
