--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,18 @@
+blinker==1.8.2
+certifi==2024.6.2
+charset-normalizer==3.3.2
 Flask==3.0.3
+fonttools==4.53.0
+fsspec==2024.5.0
+gunicorn==22.0.0
+intel-openmp==2021.4.0
+itsdangerous==2.2.0
+kiwisolver==1.4.5
+MarkupSafe==2.1.5
+matplotlib==3.9.0
 numpy==1.26.4
-opencv-python-headless==4.5.3.56
-pillow==8.3.1
-torch==1.9.0+cpu
-requests==2.26.0
-ultralytics==8.2.27
+opencv-python==4.9.0.80
+packaging==24.0
 pandas==2.2.2
 pillow==10.3.0
 psutil==5.9.8
@@ -13,4 +21,12 @@ pyparsing==3.1.2
 python-dateutil==2.9.0.post0
 pytz==2024.1
 PyYAML==6.0.1
-gunicorn==22.0.0
+requests==2.32.3
+scipy==1.13.1
+seaborn==0.13.2
+six==1.16.0
+sympy==1.12.1
+thop==0.1.1.post2209072238
+torch==2.3.0
+torchvision==0.18.0
+ultralytics==8.2.27
